# pathfindLite

./: .gitignore  CMakeLists.txt  PathFinder.cpp  PathFinder.h  TerrainMap.cpp  TerrainMap.h  main.cpp
Detour/: DetourAssert.h  DetourCommon.cpp  DetourCommon.h  DetourMath.h  DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshQuery.cpp  DetourNavMeshQuery.h  DetourNode.cpp  DetourNode.h
pathfind_lua/: BENCHMARKS.md  CLAUDE.md  MmapFileLoader.lua  MmapLuaDB_FORMAT.md  MmapLuaLoader.lua  MmapRecordingFileLoader.lua  NavMesh.lua  NavMeshQuery.lua  PATTERNS.md  PathFinder.lua  TerrainMap.lua  bench.lua  bench10.sh  bench_lua51.sh  bench_lua51_mmap_pipeline.sh  bench_mmap_bytes_compare.lua  bench_mmap_compare.lua  bench_mmap_manifest.lua  bench_mmap_pipeline.ps1  bench_mmap_record.lua  binary.lua  main.lua  orderings.lua  test.lua
pathfind_lua/tools/: convert_mmaps_to_lua.py  generate_orderings_from_dataset.py  test_mmap_luadb_roundtrip.py
